Adicionando rotas e criando o componente da loja

--- a/src/components/ShowProducts/styleTable.css
+++ b/src/components/ShowProducts/styleTable.css
@@ -10,7 +10,7 @@ tbody > tr:nth-of-type(odd){
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;  
+    margin-top: 20px
 }
 
 .inputs-modal {
