--- a/src/components/ShowProducts/styleTable.css
+++ b/src/components/ShowProducts/styleTable.css
@@ -42,3 +42,9 @@ tbody > tr:nth-of-type(odd){
     justify-content: center;
     align-items: center;
 }
+
+.teste {
+    background-image: linear-gradient(45deg,black,rgb(103, 130, 204, 0.6));
+    width: 100%;
+    height: 100vh;
+}
