--- a/src/components/Carrossel/styles.css
+++ b/src/components/Carrossel/styles.css
@@ -14,7 +14,7 @@ body {
     font-size: 50px;
     color: #fff;
     font-weight: 500;
-    height: 300px;
+    height: 500px;
     max-height: 100vh;
   }
   
@@ -76,3 +76,8 @@ body {
     );
   }
   
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
